CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

Version 1.9.0
---------------------------------------------------------------------
10 September 2008
+ Changed 400 message for sensitive types and those who don't know who
  Ponch is.
+ Added datepicker
+ Updated: javascript/datepicker

5 September 2008
+ PageSmith convert rewrite fixed.
+ bb filter pulls out newlines before translating. Replaced when done.
+ Fixed compatibility bug in DBPager's setLimit function.
+ Form.php
  o Added setId, setStyle functions
  o Removed redundant getclass function from elements.
  o Fixed spacing issues for element creation
+ Added application/word to try and mime type powerpoint properly
+ Bumped up version.
+ open_window can now have its id set.
+ Setup was checking log/ directory instead of logs/ directory.
+ Default theme altered to work with css user menu template
+ Updated: conf/file_types.php, conf/version.php,
javascript/open_window/body.js,
javascript/open_window/body2.js,
javascript/open_window/example.txt
themes/default/*

21 August 2008
+ XMLParser fixes.
+ Moved errorDefines from Init to Core.
+ Removed crutch function from Init.
+ Small error check added to Database.
+ Error - added error check to prevent endless loop
+ Text - Removed php 4 function
+ Setup
  o Added server check to beginning of installation
  o Switched off the general config step.
+ Added phpwebsite template file to file_types.php
+ Updated files: conf/file_types.php


13 August 2008
+ Key - Changed private variables to public
+ Link - added setOnClick

12 August 2008
+ Commented out Function.php inclusion since php 5 is standard.
+ Added rel="nofollow" to bb encoding [url] tag
+ Link
  o Added new setNoFollow function
  o Added setRewrite and setAnchor functions.
+ Time - changed getDTTime to return gmtime
+ Forward - a single variable after the module is considered to be an 'id'